created Playlists component and began working on main content box styled with css grid

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,8 +8,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-size: $small-font;
-    background-color: $color2;
-  
+    background-color: $color2;  
 }
 
 .header {
@@ -39,6 +38,25 @@ body {
 .rightnav {
     float: right;
     text-align: center;
+
+}
+
+.main {
+    background-color: blue;
+    margin: 16px auto;
+    padding: 0 16px;
+    max-width: 1000px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100px;
+
+    &__ul {
+        list-style-type: none;
+    }
+
+    &__li {
+        background-color: green;
+    }
 
 }
 
