--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -14,8 +14,12 @@ body {
 }
 
 .header {
-    background-color: $color1;
+    position: fixed;
+    top:0;
+    z-index: 1;
+    width: 100%;
     height: 70px;
+    background-color: $color1;
     padding: 0 16px;
     overflow: hidden;
     line-height: 70px;
@@ -44,7 +48,7 @@ body {
 }
 .main {
     background-color: blue;
-    margin: 16px auto;
+    margin: 100px auto;
     padding: 16px;
     max-width: 1250px;
 
