--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -47,16 +47,15 @@ body {
 
 }
 .main {
-    background-color: blue;
     margin: 100px auto;
     padding: 16px;
     max-width: 1250px;
 
     &__grid {
         display: grid;
-        grid-template-columns: repeat( auto-fit, minmax(200px,1fr));
+        grid-template-columns: repeat( auto-fill, minmax(200px,1fr));
         justify-items: center;
-        grid-gap: 10px;  
+        grid-gap: 50px;  
     }
 
     &__item {
