--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -53,7 +53,7 @@ body {
 
     &__grid {
         display: grid;
-        grid-template-columns: repeat( auto-fill, minmax(200px,1fr));
+        grid-template-columns: repeat( auto-fit, minmax(200px,1fr));
         justify-items: center;
         grid-gap: 50px;  
     }
