--- a/client/src/style/_styleguide.scss
+++ b/client/src/style/_styleguide.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Righteous|Roboto');
+
 $large-font: 28px;
 $small-font: 17px;
 $logo-font-family: "Righteous", cursive;
