--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -14,6 +14,7 @@ body {
 }
 
 .header {
+    color: black;
     position: fixed;
     top:0;
     z-index: 1;
@@ -26,9 +27,9 @@ body {
 
     &__hmny {
         font-family: $logo-font-family;
-        text-transform: lowercase;
         font-weight: bold;
         font-size: $large-font;
+        text-transform: lowercase;
     }
     &__a {
         color: $color2;
@@ -47,10 +48,36 @@ body {
 
 }
 .main {
+    display: flex;
+    align-items: center;
     margin: 100px auto;
     padding: 16px;
     max-width: 1250px;
 
+    &__message {
+        color: $color1;
+        font-size: $large-font;
+        max-width: 500px;
+        margin: auto;
+        padding: inherit;
+    }
+    &__welcome {
+        font-size: 40px;
+    }
+    &__hmny {
+        font-family: $logo-font-family;
+        color: yellow;
+        font-weight: bold;
+        text-transform: lowercase;
+
+    }
+    &__icons {
+        display: flex;
+        justify-content: center;
+        i {
+            padding: 15px;
+        }
+    }
     &__grid {
         display: grid;
         grid-template-columns: repeat( auto-fit, minmax(200px,1fr));
