--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -14,7 +14,7 @@ body {
 }
 
 .header {
-    color: black;
+    color: $color2;
     position: fixed;
     top:0;
     z-index: 1;
@@ -51,6 +51,7 @@ body {
     margin: 100px auto;
     padding: 16px;
     max-width: 1250px;
+    background-color: brown;
 
     &__message {
         color: $color1;
@@ -89,6 +90,34 @@ body {
         width: 200px;
     }
 
+}
+
+.playlist {
+    position: relative;
+    background-color: blue;
+    color: white;
+    height: 400px;
+
+    &__albumart {
+        position: absolute;
+        right: 0;
+        // height: 33%;
+        // width: 33%;
+    }
+    &__trackname {
+        bottom: 0;
+        background-color: yellow;
+    }
+    &__trackrow {
+        display: flex;
+        background-color: pink;
+        // width: calculate(1/3);
+
+        &__data {
+            background-color: purple;
+            padding: 0 10px;
+        }
+    }
 }
 
 .player {
