added font color/styling to Playlist component

--- a/client/src/style/_styleguide.scss
+++ b/client/src/style/_styleguide.scss
@@ -6,4 +6,6 @@ $small-font: 17px;
 $logo-font-family: "Righteous", cursive;
 $color1: white;
 $color2: black;
-$hoverColor: #ddd;
+$color3: #A9A9A9;
+$playlist-background-color: #2F4F4F;
+$hover-color: #ddd;
