added $medium-font to _styleguide

--- a/client/src/style/_styleguide.scss
+++ b/client/src/style/_styleguide.scss
@@ -1,7 +1,8 @@
 // Google Fonts
 @import url('https://fonts.googleapis.com/css?family=Righteous|Roboto');
 
-$large-font: 28px;
+$large-font: 32px;
+$medium-font: 28px;
 $small-font: 17px;
 $logo-font-family: "Righteous", cursive;
 $color1: white;
