--- a/client/src/style/partials/_styleguide.scss
+++ b/client/src/style/partials/_styleguide.scss
@@ -1,10 +1,9 @@
 // Google Fonts
-@import url('https://fonts.googleapis.com/css?family=Righteous|Roboto');
 
 $large-font: 32px;
 $medium-font: 28px;
 $small-font: 17px;
-$logo-font-family: "Righteous", cursive;
+$logo-font-family: "Righteous", "Open Sans";
 $color1: white;
 $color2: black;
 $color3: #A9A9A9;
