--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -7,6 +7,8 @@
 @import './components/header';
 @import './components/player';
 @import './components/playlist';
+@import './components/search';
+
 
 
 * {
