updated style of playlist

--- a/client/src/style/partials/_styleguide.scss
+++ b/client/src/style/partials/_styleguide.scss
@@ -7,5 +7,5 @@ $logo-font-family: "Righteous", "Open Sans";
 $color1: white;
 $color2: black;
 $color3: #A9A9A9;
-$playlist-background-color: #2F4F4F;
+$playlist-background-color: grey;
 $hover-color: #ddd;
