--- a/client/src/style/components/_search.scss
+++ b/client/src/style/components/_search.scss
@@ -46,6 +46,7 @@
         left: 0;
         right: 0;
         bottom: 0;
+        color: $color2;
         background-color: rgba(232, 236, 241, 0.97); /* Black background with opacity */
         z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
         cursor: pointer; /* Add a pointer on hover */
