--- a/client/src/style/components/_search.scss
+++ b/client/src/style/components/_search.scss
@@ -38,14 +38,14 @@
     }
 
     &__results {
-        position: absolute; /* Sit on top of the page content */
+        position: fixed; /* Sit on top of the page content */
         width: 75%; /* Full width (cover the whole page) */
-        height: 50%; /* Full height (cover the whole page) */
+        height: 64%; /* Full height (cover the whole page) */
         margin: auto;
-        top: 0; 
+        overflow: auto;
+        top: 260px; 
         left: 0;
         right: 0;
-        bottom: 0;
         color: $color2;
         background-color: rgba(232, 236, 241, 0.97); /* Black background with opacity */
         z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
@@ -58,13 +58,18 @@
 
         }
 
+
         &-button {
-          position: absolute;
-          top: 15px;
-          right: 15px;
+          position: fixed;
+          padding: 10px 0;         
+          right: 14%;
           border: none;
           font-size: 30px;
           color: red;
+        }
+
+        &-tracks {
+          margin-top: 50px;
         }
 
     }
