--- a/client/src/style/components/_search.scss
+++ b/client/src/style/components/_search.scss
@@ -60,6 +60,7 @@
 
 
         &-button {
+          z-index: 3;
           position: fixed;
           padding: 10px 0;         
           right: 14%;
