updated font-family of playlist form

--- a/client/src/style/partials/_styleguide.scss
+++ b/client/src/style/partials/_styleguide.scss
@@ -4,6 +4,7 @@ $large-font: 32px;
 $medium-font: 28px;
 $small-font: 17px;
 $logo-font-family: "Righteous", "Open Sans";
+$content-font-family: Helvetica, Arial;
 $color1: white;
 $color2: black;
 $color3: #A9A9A9;
