--- a/client/src/style/components/_main.scss
+++ b/client/src/style/components/_main.scss
@@ -2,6 +2,7 @@
     margin: 100px auto;
     padding: 16px;
     max-width: 1250px;
+    font-family: $content-font-family;
 
     &__message {
         color: $color1;
@@ -57,6 +58,8 @@
         }
 
         form {
+            
+
             input, textarea {
                 width: 100%;
                 padding: 5px;
