--- a/client/src/style/components/_playlist.scss
+++ b/client/src/style/components/_playlist.scss
@@ -3,6 +3,9 @@
     color: $color1;
     &__trackrow {
         position: relative;
+        padding: 0 0 0 15px;
+
+   
         &--white {
             font-weight: 500;
 
@@ -16,6 +19,14 @@
         &:hover {
             background-color: $hover-color;
 
+        }
+
+        button {
+            background-color: Transparent;
+            padding: 7px;
+            border: none;
+            outline: none;
+            color: $color3;
         }
     }
 
