removed background gradient

--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -19,8 +19,8 @@
 body {
   font-family: "Roboto", sans-serif;
   font-size: $small-font;
-//   background-color: $color2;
-    @include gradient(1000s);
+  background-color: $color2;
+    // @include gradient(1000s);
 
 }
 
