--- a/client/src/style/components/_main.scss
+++ b/client/src/style/components/_main.scss
@@ -40,7 +40,9 @@
         color: $color1;
         text-align: center;
         background-color: $playlist-background-color;
+        box-shadow: 4px 2px 10px black;
         height: 200px;
+        line-height: 200px;
         width: 200px;
     }
 
