--- a/client/src/style/partials/_styleguide.scss
+++ b/client/src/style/partials/_styleguide.scss
@@ -8,5 +8,5 @@ $content-font-family: Helvetica, Arial;
 $color1: white;
 $color2: black;
 $color3: #A9A9A9;
-$playlist-background-color: grey;
-$hover-color: #ddd;
+$playlist-background-color: #BE5869;
+$hover-color: #BE5869;
