--- a/client/src/style/components/_playlist.scss
+++ b/client/src/style/components/_playlist.scss
@@ -16,10 +16,10 @@
                
         }
 
-        &:hover {
-            background-color: $hover-color;
+        // &:hover {
+        //     background-color: $hover-color;
 
-        }
+        // }
 
         button {
             background-color: Transparent;
