--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -19,8 +19,14 @@
 body {
   font-family: "Roboto", sans-serif;
   font-size: $small-font;
-  background-color: $color2;
-    // @include gradient(1000s);
+  // background-color: $color2;
+  // @include gradient(1000s);
+
+  // https://uigradients.com/#Poncho
+  background: #403A3E;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #BE5869, #403A3E);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #BE5869, #403A3E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 }
 
