--- a/client/src/style/components/_main.scss
+++ b/client/src/style/components/_main.scss
@@ -40,10 +40,16 @@
         color: $color1;
         text-align: center;
         background-color: $playlist-background-color;
-        box-shadow: 4px 2px 10px black;
+        box-shadow: 2px 4px 15px black;
+        text-decoration: none;
         height: 200px;
         line-height: 200px;
         width: 200px;
+        transition: 0.25s;
+
+        &:hover {
+            transform: scale(1.1);
+        }
     }
 
     &__form {
