--- a/client/src/style/components/_player.scss
+++ b/client/src/style/components/_player.scss
@@ -55,12 +55,12 @@
     }
 
     &__button--hover:hover {
-        background-color: $hover-color;
+        background-color: #ddd;
         color: $color2;
     }
 
     &__button--volumeicon {
-        opacity: 0.5;
+        opacity: 1;
         width: 40px;
     }
 }
