--- a/client/src/style/partials/_breakpoints.scss
+++ b/client/src/style/partials/_breakpoints.scss
@@ -2,3 +2,38 @@
 $mobile: 375px;
 $tablet: 768px;
 $desktop: 1024px;
+
+
+$breakpoints: (
+	xs: (
+    min: null,
+    max: 479px
+  ),
+	sm: (
+    min: 480px,
+    max: 767px
+  ),
+  md: (
+    min: 768px,
+    max: 1024px
+  ),
+  lg: (
+    min: 1025px,
+    max: 1280px
+  ),
+	xl: (
+    min: 1281px,
+    max: 1440px
+  ),
+  xxl: (
+    min: 1441px,
+    max: 1920px
+  ),
+  xxxl: (
+    min: 1921px,
+    max: null
+  )
+);
+// // make a shorthand for accessing $breakpoints
+$bp: $breakpoints;
+
