--- a/client/src/style/partials/_styleguide.scss
+++ b/client/src/style/partials/_styleguide.scss
@@ -3,6 +3,7 @@
 $large-font: 32px;
 $medium-font: 28px;
 $small-font: 17px;
+$mobile-font: 12px;
 $logo-font-family: "Righteous", "Open Sans";
 $content-font-family: Helvetica, Arial;
 $color1: white;
