--- a/client/src/style/components/_main.scss
+++ b/client/src/style/components/_main.scss
@@ -40,7 +40,8 @@
         color: $color1;
         text-align: center;
         background-color: $playlist-background-color;
-        box-shadow: 2px 4px 15px black;
+        box-shadow: 0 4px 15px hsla(0, 0%, 0%, 0.2);
+        
         text-decoration: none;
         height: 200px;
         line-height: 200px;
