--- a/client/src/style/partials/_styleguide.scss
+++ b/client/src/style/partials/_styleguide.scss
@@ -9,5 +9,8 @@ $content-font-family: Helvetica, Arial;
 $color1: white;
 $color2: black;
 $color3: #A9A9A9;
+$secondary-opacity: hsla(0, 0%, 100%, 0.46);
 $playlist-background-color: #BE5869;
 $hover-color: #BE5869;
+$primary-font-weight: 500;
+$secondary-font-weight: 400;
